--- a/docs/The-Crownd.org
+++ b/docs/The-Crownd.org
@@ -34,3 +34,20 @@
     + 群体一般只有很普通的品质。
     + 决定群体特有的特点的原因：
       - 即使仅从数量上来考虑，形成群体的个人也会感觉到一种势不可挡的力量，这使他敢于发泄出自本能的欲望，而在独自一人时，他是必须对这些欲望加以限制的。他很难约束自己不产生这样的念头： *群体是个无名氏，因此也不必承担责任* 。
+      - 在群体中，每种感情和行动都有传染性，其程度足以使个人随时准备为集体利益牺牲他的个人利益。通过不同的过程，集体中的个人可以被带入一种完全失去人格的状态，而不再能够意识到自己的行为。
+    + 群体中的个人不但行动上和他本人有着本质的差别，甚至在完全失去独立性之前，他的思想和感情就已经发生了变化。
+    + 群体在智力上总是低于孤立的个人，但是从感情及其激起的行动这个角度看，群体可以比个人表现得更好或更差，这全看环境如何。一切取决于群体所接受的暗示具有什么性质。
+    + 群体冲动而多变。
+    + 群体通常总是处在一种期待注意的状态中，因此很容易受人暗示。
+*** 群体的观察力: 
+    + 群体很少对主观和客观加以区分。它把头脑中产生的景象也当作现实，尽管这个景象同观察到的事实几乎总是只有微乎其微的关系。
+    + 不是骗术本身的神奇，而是外行目击者也所提供的报告的极端虚弱。
+    + 集体的观察极可能出错，大多数时候它所表达的是在传播过程中影响同伴的个人幻觉。应当理智地认为群体的证词极不可靠。
+    + 打动群体心灵的是神话中的英雄，而不是当时的真实英雄。
+***  群体心理
+    + 群体表现出来的感情不管是好是坏，其突出的特点是简单而夸张。
+    + 个人一旦成为群体的一员，其智力就会大大下降。
+    + 群体随时会反抗软弱可欺者，对强权低声下气。如果强权时断时续，而群体又总是被极端情绪所左右，它便会表现得反复无常，时而无法无天，时而卑躬屈漆。
+    + 群体中的暴力倾向处于主体地位？
+    + 群体强烈地受着无意识的支配，因此很容易屈从于世俗的等级制，难免会十分保守。
+    + 群体可以杀人放火，无恶不作，但是也能表现出极崇高的献身、牺牲和不记名利的举动，即孤立的个人根本做不到的极崇高的行为。以名誉、光荣和爱国主义作为号召，最有可能影响到组成群体的个人，而且经常可以达到使他慷慨赴死的地步。
