--- a/docs/The-Crownd.org
+++ b/docs/The-Crownd.org
@@ -51,3 +51,6 @@
     + 群体中的暴力倾向处于主体地位？
     + 群体强烈地受着无意识的支配，因此很容易屈从于世俗的等级制，难免会十分保守。
     + 群体可以杀人放火，无恶不作，但是也能表现出极崇高的献身、牺牲和不记名利的举动，即孤立的个人根本做不到的极崇高的行为。以名誉、光荣和爱国主义作为号召，最有可能影响到组成群体的个人，而且经常可以达到使他慷慨赴死的地步。
+*** 群体的理性
+    + 群体的理性的特点，是把彼此不同、只在表面上相似的事物搅在一起，并且立刻把具体的事物普遍化。
+    + 正像缺乏推理能力的人一样，群体形象化的想象力不但强大而活跃，并且非常敏感。
