* 群体的意见与信念－

--- a/docs/The-Crownd.org
+++ b/docs/The-Crownd.org
@@ -54,3 +54,18 @@
 *** 群体的理性
     + 群体的理性的特点，是把彼此不同、只在表面上相似的事物搅在一起，并且立刻把具体的事物普遍化。
     + 正像缺乏推理能力的人一样，群体形象化的想象力不但强大而活跃，并且非常敏感。
+    + 从一定意义上说，群体就像个睡眠中的人，他的理性已被暂时悬置，因此他的头脑中能产生出极鲜明的形象，但是只要他能够开始思考，这种形象也会迅速消失。
+    + 在历史上，表象总是比真相起着更重要的作用，不现实的因素总是比现实的因素更重要。
+    + 侵略者的权力和国家的威力，便是建立在群体的想象力上。在领导群体时，尤其要在这种想象力上狠下功夫。
+    + 影响群众的想象力，万万不可求助于智力或推理，绝对不可以采用论证的方式。
+    + 影响民众想象力的，并不是事实本身，而是它们发生的引起注意的方式。掌握了影响群众想象力的艺术，也就掌握了统治它们的艺术。
+    + 偏执与妄想是宗教感情的必然伴侣。
+    + 群体的信念有着盲目服从、残忍的偏执以及要求狂热的宣传等特点。
+    + 一切宗教或政治信条的创立者之所以能够立住脚，皆因为它们成功地激起了群众想入非非的感情，它们使群众在崇拜和服从中，找到了自己的幸福，随时准备为自己的偶像赴汤大火。
+    + 在同理性永恒的冲突中，失败的从来就不是感情。
+    + 研究群体信念长期采取的宗教形式，否则便不可能理解一些肯定十分重要的历史事件。对某些社会现象的研究，更需要着眼于 *心理学的角度* ，而不是自然主义的角度。
+*** 群体的意见和信念
+    + 种族的力量具有这样的特点，没有任何要素在从一个民族传播给另一个民族时，不会经历深刻的变化。
+    + 不管是语言、宗教还是艺术，总之，文明中的一切要素，都不能原封不动地从一个民族转移给另一个民族。
+    + 具体而言，群体的意见和信念是由时间装备起来的，至少是它们准备了生长的土壤。是时间把各种信仰和思想的碎屑堆积成山，从而使某个时代能够产生出它们的观念。
+    + 想看到平衡的恢复，除了依靠时间，再无他法。
