* 群体的特征与教育作用

--- a/docs/The-Crownd.org
+++ b/docs/The-Crownd.org
@@ -1,4 +1,4 @@
-* 乌合之众(这书名，怎么起的这么有才)
+* 乌合之众 -- 大众心理研究
 *** 前言
     + 不 *严重地依赖历史* ，根本无法谈论 *群体行为* 。
     + 在决定人们的历史地位上起着更大作用的，不是他们的“真实”面目，而是后人对他们的 *认识和感受* 。
@@ -69,3 +69,12 @@
     + 不管是语言、宗教还是艺术，总之，文明中的一切要素，都不能原封不动地从一个民族转移给另一个民族。
     + 具体而言，群体的意见和信念是由时间装备起来的，至少是它们准备了生长的土壤。是时间把各种信仰和思想的碎屑堆积成山，从而使某个时代能够产生出它们的观念。
     + 想看到平衡的恢复，除了依靠时间，再无他法。
+    + 制度能够改正社会的弊端，国家的进步是改进制度与统治带来的结果，社会改革可以用各种命令来实现。各种制度是观念、感情和习俗的产物，而观念、感情和习俗并不会随着改写法典而被一并改写。
+    + *制度* 和 *政府* 都是种族的产物。一个名族并没有真正改变其各种制度的能力。
+    + 深刻影响群体禀性的手段，不能到制度中去寻找。
+*** 教育
+    + 学习课程，把一种语法或一篇纲要牢记在心，重复得好，模仿也出色－－这实在是一种十分可笑的教育方式，它的每项工作都是一种信仰行为，即默认教师不可能犯错误。这种教育的唯一结果，就是自我贬低，让人无能。这种教育制度的危险，使服从它的人强烈地厌恶自己的生活状态，极想逃之夭夭。
+    + 掌握一些派不上用场的知识，是让人造反的不二法门。
+    + 生活中取得成功的条件是判断力，是经验，是开拓精神和个性－－这些素质都不是书本能够带来的。教科书和字典可以是有用的参考工具，但长久把他们放在脑子里却没有任何用处。
+    + 教育应能够是一个国家的年轻人了解到这个国家会变成什么样子。
+    + 在改善或恶化群众的头脑方面，教育至少能发挥一部分作用。
