--- a/docs/The-Crownd.org
+++ b/docs/The-Crownd.org
@@ -77,4 +77,40 @@
     + 掌握一些派不上用场的知识，是让人造反的不二法门。
     + 生活中取得成功的条件是判断力，是经验，是开拓精神和个性－－这些素质都不是书本能够带来的。教科书和字典可以是有用的参考工具，但长久把他们放在脑子里却没有任何用处。
     + 教育应能够是一个国家的年轻人了解到这个国家会变成什么样子。
-    + 在改善或恶化群众的头脑方面，教育至少能发挥一部分作用。
+    + 在改善或恶化群众的头脑方面，教育至少能发挥一部群体分作用。
+*** 群体意见
+    + 词语的威力与它们所唤醒的形象有关，同时又独立于它们的真实含义。最不明确的词语，有时反而影响最大。比如 *民主* , *自由* 。
+    + 词语只有变动不定的暂时定义，它随着时代和民族的不同而不同。
+    + 执政府和帝国的具体工作就是用新的名称把大多数过去的制度重新包装一遍。这就是说: 用新名称代替那些能够让群众想起不利形象的名称，因为它们的新鲜能防止这种联想。
+    + 政治家最基本的任务之一，就是对流行用语，或至少对再没有人感兴趣，民众已经不能容忍其旧名称的事物保持警觉。
+    + 统治者的艺术，就像律师的艺术一样，首先在于驾驭辞藻的学问。这门艺术遇到的最大困难之一，就是在同一个社会，同一个词对于不同的社会阶层往往有不同的含义，表面上看它们用词相同，其实它们说着不同的语言。
+    + 哲学不管取得了多大进步，它迄今仍没有给群众提供任何能够让它们着迷的理想。然而群众无论付出多大的代价，它们必须拥有自己的幻想。
+    + 群众从来就没有渴望果真理，面对不和胃口的证据，它们会拂袖而去，假如谬论对它们有诱惑力，它们更愿意崇拜谬论，凡是能向他们提供幻觉的，也可以很容易成为他们的主人，凡是让他们幻灭的，都会成为他们的牺牲品。
+*** 理性 
+    + 逻辑定律对群体不起作用。让群体相信什么，首先得搞清楚让他们兴奋的感情，并且用换位去体会这种感情，然后借助于联想，用一些非常著名的暗示性形象，去改变他们的看法。
+    + 每个种族的精神成分中都携带着它命运的因素。
+    + 要想知道民族背后的神秘力量，必须研究一个民族的整个进化进程。
+    + 文明的主要动力并不是理性，倒不如说，尽管存在着理性，文明的动力仍然是各种感情－－比如尊严、自我牺牲、宗教信仰、爱国主义以及对荣誉的爱。
+***  群体领袖
+    + 只要有一些生物聚集在一起，不管是动物还是人，都会本能地让自己处在一个头领的统治之下。
+    + 无论信仰是宗教的、政治的或社会的，也无论这信仰的对象是一本书、一个人或一种观念，信仰的建立永远取决于人群中伟大领袖的作用。
+    + 在群体的灵魂中占上风的，并不是对自由的要求，而是当奴才的欲望。
+    + 如果想在很短的时间里激发起群体的热情，让他们采取任何性质的行动，譬如掠夺宫殿、誓死捍卫要塞或阵地，就必须让群体对暗示做出迅速的反应，其中效果最大的就是榜样。
+    + 影响群体的三种常用方法
+      - 做出简洁有力的断言，不理睬任何推理和证据，是让某种观念进入群众头脑最可靠的办法之一。
+      - 不断地重复断言。极其重要的修辞法只有一个，就是重复。 从长远看，不断重复的说法会进入我们无意识的自我的深层区域，而我们的行为动机正是在这里形成的。
+      - 传染。很多影响要归因于模仿，其实这不过是传染造成的结果。
+    + 得到民众接受的每一种观念，最终总是会以其强大的力量在社会的最上层扎根，不管获胜意见的荒谬性是多么显而易见。
+*** 名望
+    + 最大的名望归死人所有。历史，尤其是文学和艺术的历史，不过就是在不断地重复一些判断。
+    + 名望的特点是阻止人们看到事物的本来面目，让我们的判断力彻底麻木。群众就像个人一样，总是需要对一切事物有现成的意见。
+    + 名望是说服群众的一个基本因素。
+    + 当名望变成问题时，便不再是名望。能够长期保持名望的神与人，对探讨都毫不宽容。为了让群众敬仰，必须同它保持距离。
+
+
+
+
+
+
+
+
