* 乌合之众终结了

--- a/docs/The-Crownd.org
+++ b/docs/The-Crownd.org
@@ -106,11 +106,31 @@
     + 名望的特点是阻止人们看到事物的本来面目，让我们的判断力彻底麻木。群众就像个人一样，总是需要对一切事物有现成的意见。
     + 名望是说服群众的一个基本因素。
     + 当名望变成问题时，便不再是名望。能够长期保持名望的神与人，对探讨都毫不宽容。为了让群众敬仰，必须同它保持距离。
-
-
-
-
-
-
-
-
+*** 牢固的信念
+    + 伟大的普遍信念数量十分有限。它们的兴衰是每一个文明种族的历史上令人瞩目的事件。它们构成了文明的真正基础。
+    + 一场革命的开始，其实就是一种信念的末日。
+    + 一种信念开始衰亡的确切时刻很容易辨认－－这就是它的价值开始收到质疑的时刻。一切普遍信念不过是一种虚构，它唯一的生存条件就是它不能受到审查。
+    + 普遍信念是文明不可缺少的柱石，它们决定着各种思想倾向。只有它们能够激发信仰并形成责任意识。
+    + 各民族在捍卫自己意见时，总是表现出不宽容的态度。
+    + 建立普遍信念的道路可谓困难重重，不过一旦它站稳了脚跟，它便会长期具有不可征服的力量，无论从哲学上看它多么荒谬，它都会进入最清醒的头脑。
+    + 新的教条一旦在群体的头脑中生根，就会成为鼓舞人心的源泉，它由此会发展出各种制度、艺术和生活方式。
+    + 一切与民族的普遍信念和情感相悖的东西，都没有持久力，逆流不久便又回到了主河道。
+*** 群体的分类
+**** 异质性派别
+***** 无名称的群体（如街头群体）
+***** 有名称的群体（如陪审团、议会等）
+**** 同质性群体
+***** 派别（政治派别、宗教派别等）
+***** 身份团体（军人、僧侣、劳工等）
+***** 阶级　（中产阶级，农民阶级等）
+      + 最初级的形态，唯一能够形成团结的共同纽带，是头领或多或少受到尊敬的意志。
+      + 人作为行动的群体中的一员，他们的集体心理与他们的个人心理有着本质的差别，而且他们的智力也会受到这种差别的影响。
+      + 由于种族精神的强大，群体的次要性格相比之下并不十分重要。
+      + 种族正是通过获得结构稳定的集体精神，才使自身在越来越大的程度上摆脱了缺乏思考的群体力量，走出了野蛮状态。
+      + 派别是同质性群体组织的第一步。一个派别包括在教育、职业和社会阶级的归属方面大不相同的个人，把他们联系在一起的是共同的信仰。
+      + 阶级是又来源不同的个人组成的，和派别有所不同，使他们结合在一起的不是共同的信仰，也不像身份团体那样，是因为相同的职业，而是某种利益、生活习惯以及几乎相同的教育。
+*** 犯罪群体
+    + 有些事，在法律上可以视为犯罪，从心理上却不是犯罪。
+    + 犯罪群体的一般特征与我我们在所有群体中看到的特征并无不同：易受怂恿，轻信，易变，把良好或恶劣的感情加以夸大，表现出某种道德。
+    + 当一个善于思考的团体要求就某个并非完全技术性的问题发表意见时，智力起不了多少作用。
+    + 群体本能地在精力旺盛信仰坚定的人中间寻找自己的主子，他们永远需要这种人物。
