* 乌合之众读后感

--- a/docs/The-Crownd.org
+++ b/docs/The-Crownd.org
@@ -134,3 +134,7 @@
     + 犯罪群体的一般特征与我我们在所有群体中看到的特征并无不同：易受怂恿，轻信，易变，把良好或恶劣的感情加以夸大，表现出某种道德。
     + 当一个善于思考的团体要求就某个并非完全技术性的问题发表意见时，智力起不了多少作用。
     + 群体本能地在精力旺盛信仰坚定的人中间寻找自己的主子，他们永远需要这种人物。
+
+*** 读后感
+    + 首先是震惊: 从来没有跳出自己作为一个群体成员的思维去审视自己处在一个什么样的人群中。然后开始思考种种，影视在我们的心理上的虚幻投影，从小到大的启蒙教育经历，生活圈中的各种场合，未来生活的构成方式，职业生涯的走势，等等。总之，有种醍醐灌顶的感觉。既有一种不祥的预感，也有一种不安的忧虑，还伴随着一丝烦躁。有点像楚门刚逃出别人为他编织的"楚门的世界"的那种感觉吧。
+    + 然后，今年有所行动。
