--- a/docs/What-did-Philosophers-do.org
+++ b/docs/What-did-Philosophers-do.org
@@ -19,7 +19,7 @@
     + 必须用暴力解决的问题都是解决不了的问题。
     + 哲学的传承史浸满了鲜血。
     + 站在文明历史的角度去看，亡国并不一定是最可怕的。可怕的是焚书，是毁掉学校，是用暴力消灭言论。
-    + 敬字惜纸。
+    + 敬字惜纸, 这不光是书呆子的任务，这更是文明之路。
     + 中国人对待宗教有更多的实用主义的倾向，信宗教大多是为了要点好处。
     + 在他们烧书的地方，他们最终会烧人。
     + 工商业和农业的一个区别是，人民不需要看天吃饭。
@@ -27,3 +27,26 @@
     + *一言兴邦*
     + 革命者惯有的缺点－－不容异己。
     + 哲学和宗教的联合是行不通的。宗教只会把哲学当做获权的工具，一旦取得胜利，就会毫不犹豫地把哲学扔到一边。
+** 怀疑
+    + 怀疑是思考的起点，也是思考成果的检验者。怀疑的最大作用在于避免独断论，这样才能引导我们寻找正确的答案，免得我们轻信一切未经证实的结论。
+    + 当年苏格拉底那么找人讨厌, 却能被后人奉为圣贤。是因为他的怀疑是理性文明的开端和标尺。
+    + 虽然宗教改革没给哲学带来什么好处，但是仅凭人需要思考、思考需要怀疑这一点，哲学早晚要绽放出自己的光芒。
+    + 最初的光恰恰从最黑暗的地方亮起。
+    + 教会最可怕的武器是宗教裁判所。
+    + 商业和哲学很有关系。商人善于谋划思考，因此孕有思辨精神。同时，商业城市人口流动大，所以对外来和新兴的文化更为包容。而不像农业社会那样，强调的是社会稳定，强调的是循规蹈矩。
+    + *怀疑精神是哲学的灵魂* 。
+    + 研究哲学的的第一个任务就是用怀疑的目光把所有的知识重新检查一遍。
+    + 知识不在先贤的书里，而是在实际检验里。
+    + *微言大义*
+    + 我们的结论必须能够经得起各种怀疑，这样才能保证它真实可信。
+    + 自然界里一个严格意义上的几何图形都没有。但是几何规律却又无处不在。
+    + 形而上者为之道，形而下者谓之器。　－－　《易经》
+    + "*形而上学*" 可以简单地理解成是用理性思维去研究那些能统一世间一切问题的“大道理”。
+    + 哲学上的本体论就是回答： *世界的本质是什么* 。
+    + 认识论: *哪些知识是真实可信的* 。
+    + 二元论: 把讨论的问题分成两个部分，一个是我们自己的心灵，一个是心灵之外的部分。
+    + 唯物主义: 世界的本质是物质的，我们的精神世界不过是大脑生理活动的结果。换句话说，精神是从物质中产生的。
+    + 我们遇到的所有痛苦可以分成两类: 感官上的和精神上的。
+    + 快乐得到得越多，人对快乐就越不敏感，就越难以忍受痛苦。
+    + 只要不是即将死亡，忍受感官上的痛苦总能给人带来一定的汇报。(所以企业创业时最关键的就是生存下去。)
+    + 我们怕穷，并不是我们不能忍受粗糙的吃穿，而是因为不愿意整日生活在对贫穷的恐惧和屈辱中。我们不愿意忍受的是那种担惊受怕的状态。所以，在面对痛苦的时候，我们应该把自己的感受局限在此时一瞬，而不要顾及那些未到的痛苦。
