--- a/docs/What-to-Listen-for-in-Music.org
+++ b/docs/What-to-Listen-for-in-Music.org
@@ -14,4 +14,5 @@
     + 音乐在不同的时刻有不同的表达: 或安详安静或朝气蓬勃; 或懊悔不迭或心满意足; 或暴怒或喜悦。它可以用无数细微差别和变化来表达上述情绪中的一种，以及许多其他的情绪，甚至可以表达任何语言都无法言说的情绪。
     + 专业音乐人士和业余爱好者的区别在于他们更关注音符本身。
     + 所有人都应该在纯音乐的层次上使自己更敏感, 这点非常重要。
-    + 毕竟他们使用的是实际的音乐素材。理解能力强的听众必须强化对音乐素材的意识，知道它们是怎么发展推进的; 必须更有意识地去听音乐的旋律、节奏、和声和音色。为了跟上作曲家的思想脉络，必须懂得一些音乐曲式的原理，这一点尤其重要。当你能听出旋律、节奏等要素的时候，你慢慢就会在纯音乐的层次上听出门道。
+    + 毕竟他们使用的是实际的音乐素材。理解能力强的听众必须强化对音乐素材的意识，知道它们是怎么发展推进的; 必须更有意识地去听音乐的旋律、节奏、和声和音色。为了跟上作曲家的思想脉络，必须懂得一些音乐曲式的原理，这一点尤其重要。当你能听出旋律、节奏等要素的时候，你慢慢就会在纯音乐的层次上听出门道。 + 从某种意义上说，理想的听众在同一时刻既能进入音乐也能超脱音乐，既可以品评音乐也可以欣赏音乐; 希望音乐向某个方面运行，同时又注视着它向另外一个方向进行，几乎像作曲家创作时一样。原因在于，作曲家在创作的时候必须能进能出，时而心醉沉迷，时而冷静批评。无论创作还是欣赏音乐，同时要具有主客观两种态度。
+    + 只有当你更自觉、更有意识地听; 不仅是听，而且带着某些目的地听，才能加深对音乐的理解。
