* 创作的过程

--- a/docs/What-to-Listen-for-in-Music.org
+++ b/docs/What-to-Listen-for-in-Music.org
@@ -7,6 +7,7 @@
       - 感官层次
       - 表达层次
       - 纯音乐层次
+*** 怎么听音乐
     + 音乐的感染力是一种强大而原始的力量。
     + 并非所有的作曲家在处理声音方面都用同一种方法。不要以为音乐的价值等同于它诉诸感官的程度，就音响方面而言，也不要以为最优美的音乐都是由最伟大的作曲家写的。
     + 凡事不能走极端。
@@ -16,3 +17,7 @@
     + 所有人都应该在纯音乐的层次上使自己更敏感, 这点非常重要。
     + 毕竟他们使用的是实际的音乐素材。理解能力强的听众必须强化对音乐素材的意识，知道它们是怎么发展推进的; 必须更有意识地去听音乐的旋律、节奏、和声和音色。为了跟上作曲家的思想脉络，必须懂得一些音乐曲式的原理，这一点尤其重要。当你能听出旋律、节奏等要素的时候，你慢慢就会在纯音乐的层次上听出门道。 + 从某种意义上说，理想的听众在同一时刻既能进入音乐也能超脱音乐，既可以品评音乐也可以欣赏音乐; 希望音乐向某个方面运行，同时又注视着它向另外一个方向进行，几乎像作曲家创作时一样。原因在于，作曲家在创作的时候必须能进能出，时而心醉沉迷，时而冷静批评。无论创作还是欣赏音乐，同时要具有主客观两种态度。
     + 只有当你更自觉、更有意识地听; 不仅是听，而且带着某些目的地听，才能加深对音乐的理解。
+*** 音乐创作过程
+    + 灵感－－　乐思。
+    + 作曲家的任务是要使听音乐的人始终知道自己听到了哪个段落，开始段、中间段，还是结束段。
+    + 音乐必须永远是流动的，这是它的本质, 而这种连续性和流动性, 也就是那条“长线”的创造，是决定每个作曲家成败的关键。
