--- a/docs/What-to-Listen-for-in-Music.org
+++ b/docs/What-to-Listen-for-in-Music.org
@@ -21,3 +21,11 @@
     + 灵感－－　乐思。
     + 作曲家的任务是要使听音乐的人始终知道自己听到了哪个段落，开始段、中间段，还是结束段。
     + 音乐必须永远是流动的，这是它的本质, 而这种连续性和流动性, 也就是那条“长线”的创造，是决定每个作曲家成败的关键。
+*** 音乐的四种要素
+    + 音乐有四中基本要素: 节奏、旋律、和声和音色。
+    + 音乐和诗的区别在于，音乐可以同时具有明显的节拍感和节奏感。
+    + 在时值上，一个全音符等于两个二分音符，或者四个四分音符，或者八个八分音符，以此类推。
+    + 一个全音符的时值只是相对的，但是由它分割而成的较小的时值都是均等的。如果每个小节有四个四分音符，这首乐曲就是四四拍。
+    + 只有当强拍不重合的时候，才会出现真正意义上的复节奏。
+    + 从整体上说，一段优美的旋律就像一首乐曲，在比例规模等方面应当让人满意，必须让人感到它是完备的，非如此不可。为了达到这个目的，旋律线一定要悠长而流畅，有令人愉悦的高低起伏，通常在接近尾声时达到高潮。在旋律结构中，节奏的流畅感也非常重要。旋律必须能引起听众的情感反应。(最近听过一个唱歌节目，唱的人自己哭到泪流满面，而听众都是面目表情!)
+    + "1234567(do lei mi fa so la xi do)" 叫做自然大调音阶(七声音阶)。
