--- a/docs/Spiritual-of-Center.org
+++ b/docs/Spiritual-of-Center.org
@@ -14,7 +14,7 @@
     + 比起木谷先生培养了众多的后辈棋手来，我更想把围棋推向世界。(从这个里面可以看出，为什么日本最后 *六超* 之后，再也没有达到过世界前沿。)
     + *21世纪的围棋* , 简而言之就是“ *从棋盘的整体去考虑* ”。围棋一般分序盘、中盘、官子几个阶段来进行思考的，但我想，应该是从整体上去思考。(按整体去思考，我余下的人生应该怎样度过？)
     + *所谓最佳一手，指的是棋子下在某个位置上，之后棋力相等的棋手无论怎样去继续，那手棋始终处于有利于全局的位置。２１世纪的围棋也要继续变化下去* 。 
-    + *一阳來夏，复旦天心* 。
+    + *一阳來复，复旦天心* 。
     + 像季节轮回那样，世界也是盛衰轮回，一旦衰之极也会复苏过来，这是自然的形态。
     + 围棋的目标不是局限于边角，而是应该很好地保持 *全体的平衡* ，站在一个很高的角度去看待。（所以，学习python, lisp, emacs, vim, php源码, 读书，下棋，游泳，爬山，旅游并不是浪费时间。而是站在一个相对平衡的角度思考人生，实践求证 ）
     + *棋盘即是宇宙* 。
