--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
+*** 日常
+    + 日常里面应该多做一些改善当前工作，学习的东西。减少和当前工作切入点关联太远的事情。
 *** aircrack-ng 
     + Hack for funny! 
     + question: =ls: cannot access '/sys/class/ieee80211/': No such file or directory=
