* 寒冬夜行人

--- a/docs/What-did-Philosophers-do.org
+++ b/docs/What-did-Philosophers-do.org
@@ -50,3 +50,12 @@
     + 快乐得到得越多，人对快乐就越不敏感，就越难以忍受痛苦。
     + 只要不是即将死亡，忍受感官上的痛苦总能给人带来一定的汇报。(所以企业创业时最关键的就是生存下去。)
     + 我们怕穷，并不是我们不能忍受粗糙的吃穿，而是因为不愿意整日生活在对贫穷的恐惧和屈辱中。我们不愿意忍受的是那种担惊受怕的状态。所以，在面对痛苦的时候，我们应该把自己的感受局限在此时一瞬，而不要顾及那些未到的痛苦。
+** 寒冬夜行人
+    + 当一个人找到自己的哲学答案以后，他是不会被摧毁的。
+    + 实体的特征是，这东西自己就是自己存在的原因，不依赖外物存在。
+    + 自然充满无限的力量。
+    + 斯宾诺莎的执行原则
+      - 说话尽量让别人明白，只要别人对我们的要求不会影响我们实现的目标，那就尽量满足。
+      - 只享受为保持健康所必需的生活乐趣。
+      - 只求取为生活和健康所必需的金钱。
+
