--- a/docs/Out-of-Control.org
+++ b/docs/Out-of-Control.org
@@ -43,3 +43,7 @@
     + 命运始终具有讽刺意味。
     + 顺其自然就好。
     + 大气是极其重要的环境因素，大气产生生命，生命也可以产生大气。
+    + 不要着急，不要在系统自组织的时候就急着催它孕育。你能给它的最重要的东西就是 *时间* 。
+    + 所有复杂的共同进化系统都需要“ *冒出* ”。
+    + 可以通过逐渐提高复杂性来重组大型系统；一旦一个系统达到了稳定水平，它就不会轻易地趋向于倒退，仿佛这个系统被新的复杂性带来的凝聚力所“吸引”。人类组织，比如团队和公司，也显示出 " *冒出* "的特征。
+    + *生命就是技术* 。机器技术只不过是生命技术的临时替代品而已。随着我们对机器的改进，他们会变得更有机，更生命化，更近似生命， *因为生命是生物的最高技术* 。总有一天，机器和生物间的差别会很难区分。
