--- a/docs/What-did-Philosophers-do.org
+++ b/docs/What-did-Philosophers-do.org
@@ -43,7 +43,7 @@
     + 形而上者为之道，形而下者谓之器。　－－　《易经》
     + "*形而上学*" 可以简单地理解成是用理性思维去研究那些能统一世间一切问题的“大道理”。
     + 哲学上的本体论就是回答： *世界的本质是什么* 。
-    + 认识论: *哪些知识是真实可信的* 。
+    + 认识论: *哪些知识是真实的* 。
     + 二元论: 把讨论的问题分成两个部分，一个是我们自己的心灵，一个是心灵之外的部分。
     + 唯物主义: 世界的本质是物质的，我们的精神世界不过是大脑生理活动的结果。换句话说，精神是从物质中产生的。
     + 我们遇到的所有痛苦可以分成两类: 感官上的和精神上的。
@@ -58,4 +58,14 @@
       - 说话尽量让别人明白，只要别人对我们的要求不会影响我们实现的目标，那就尽量满足。
       - 只享受为保持健康所必需的生活乐趣。
       - 只求取为生活和健康所必需的金钱。
+** 双星 
+    + 要重视事实。在事实的基础上进一步形成科学知识。
+    + 演绎推理不能给我们带来任何新知识。
+    + 推理是等价的，所以推理得出的内容其实都包含在它的前提条件里了。
+    + 研究哲学的原则是避免独断论。
+    + 归纳法永远都只能立足于有限的事实上，而不可能把所有的现实全部实验一遍。
+    + 科学得出的真理顶多是一种概率真理。科学家不断做实验，顶多是把科学理论正确的概率提高了一点，却永远不能保证科学理论的绝对正确。
+    + 人与动物的区别: 动物做事只凭经验，人却能根据经验总结出必然规律。
+    + 世界上没有两片树叶是一样的。
+
 
