--- a/docs/Out-of-Control.org
+++ b/docs/Out-of-Control.org
@@ -47,3 +47,6 @@
     + 所有复杂的共同进化系统都需要“ *冒出* ”。
     + 可以通过逐渐提高复杂性来重组大型系统；一旦一个系统达到了稳定水平，它就不会轻易地趋向于倒退，仿佛这个系统被新的复杂性带来的凝聚力所“吸引”。人类组织，比如团队和公司，也显示出 " *冒出* "的特征。
     + *生命就是技术* 。机器技术只不过是生命技术的临时替代品而已。随着我们对机器的改进，他们会变得更有机，更生命化，更近似生命， *因为生命是生物的最高技术* 。总有一天，机器和生物间的差别会很难区分。
+*** 看不见的智能
+    + 最深刻的技术是那些看不见的技术，它们讲自己编织进日常生活的细枝末节之中，直到成为生活的一部分。书写的技术走下精英阶层，不断放低身段，从我们的注意力中淡出。
+    + 电脑的胜利不但不会使世界非人化，反而会使环境更臣服于人类的愿望。我们创造的不是机器，而是讲我们所学所能融会贯通于其中的机械化环境。我们在将自己的生命延伸到周边环境中去。
