--- a/docs/Out-of-Control.org
+++ b/docs/Out-of-Control.org
@@ -50,3 +50,4 @@
 *** 看不见的智能
     + 最深刻的技术是那些看不见的技术，它们讲自己编织进日常生活的细枝末节之中，直到成为生活的一部分。书写的技术走下精英阶层，不断放低身段，从我们的注意力中淡出。
     + 电脑的胜利不但不会使世界非人化，反而会使环境更臣服于人类的愿望。我们创造的不是机器，而是讲我们所学所能融会贯通于其中的机械化环境。我们在将自己的生命延伸到周边环境中去。
+    + 缺少了隐私技术的网络文化是无法兴旺的。
