--- a/docs/Out-of-Control.org
+++ b/docs/Out-of-Control.org
@@ -51,3 +51,16 @@
     + 最深刻的技术是那些看不见的技术，它们讲自己编织进日常生活的细枝末节之中，直到成为生活的一部分。书写的技术走下精英阶层，不断放低身段，从我们的注意力中淡出。
     + 电脑的胜利不但不会使世界非人化，反而会使环境更臣服于人类的愿望。我们创造的不是机器，而是讲我们所学所能融会贯通于其中的机械化环境。我们在将自己的生命延伸到周边环境中去。
     + 缺少了隐私技术的网络文化是无法兴旺的。
+    + 哪里有生态系统，哪里就有精通本地事务的生命。
+    + 人类渴求隐私，但事实上，我们的社会性胜过独立性。如果机器也像我们这样互相了解（甚至是一些很私密的事情），那么机器生态就是不可征服的。
+    + 自然界没有垃圾问题，因为物尽其用。
+    + 想大自然一样从事。
+    + 机器是整体系统, 强调系统效率最大化。将自然环境的模式作为解决环境问题的模板。
+    + 尽可以将所有能想到的废物都看作是潜在的原材料。任何在当下没有用的材料，都可以通过设计从源头将它消除。
+    + 生态技术即使带不来令人震惊的利润，也会带来一定的成本收益。
+    + 工业将无可避免地采用生物方式
+      - 它能用更少的材料造出更好的东西。
+      - 自然是掌控复杂性的大师，在处理杂乱、反直观的网络方面给我们以无价的引导。未来的人造复杂系统为了能够运转，必然会有意识地注入有机原则。
+      - 大自然是不为所动的，所以必须去适应她。
+      - 自然界本身－－基因和各种生命形式－－与工业系统一样能够被工程化（或模式化）。
+      - 生物学是一个必然－－近于数学的必然，所有复杂性归向的必然。它是一个欧米茄（Omega）点。在天生和人缓慢的混合过程中，有机是一种显性性状，而机械是隐性性状。最终，获胜的总是生物逻辑。
