--- a/docs/Out-of-Control.org
+++ b/docs/Out-of-Control.org
@@ -64,3 +64,9 @@
       - 大自然是不为所动的，所以必须去适应她。
       - 自然界本身－－基因和各种生命形式－－与工业系统一样能够被工程化（或模式化）。
       - 生物学是一个必然－－近于数学的必然，所有复杂性归向的必然。它是一个欧米茄（Omega）点。在天生和人缓慢的混合过程中，有机是一种显性性状，而机械是隐性性状。最终，获胜的总是生物逻辑。
+*** 信息工厂
+    + 一个纯粹网络化的公司，应该具备这些特点
+      - 分布式
+      - 去中心化
+      - 协作
+      - 可适应性
