--- a/docs/Out-of-Control.org
+++ b/docs/Out-of-Control.org
@@ -70,3 +70,5 @@
       - 去中心化
       - 协作
       - 可适应性
+    + 在大多数情况下，真正的财富都是通过把某种流程置于集中控制之下而获得的。越大，效率越高。
+    + 如果把一个任务拆分成若干块交给不同的公司来完成，若想保持质量的话，所需的交易成本要高于在一个公司内完成这项任务的成本。
