* 与错误打交道

--- a/docs/Out-of-Control.org
+++ b/docs/Out-of-Control.org
@@ -72,3 +72,10 @@
       - 可适应性
     + 在大多数情况下，真正的财富都是通过把某种流程置于集中控制之下而获得的。越大，效率越高。
     + 如果把一个任务拆分成若干块交给不同的公司来完成，若想保持质量的话，所需的交易成本要高于在一个公司内完成这项任务的成本。
+*** 与错误打交道
+    + 软件的编制遵循三个中心化的关键步骤。
+      - 首先设计一个全景图
+      - 然后用代码实现细节
+      - 最后，在接近项目尾声的时候，将其作为交互的整体来进行测试。
+    + 绝对不可能避免错误，但是可以避免错误成为缺陷。零缺陷设计的人物就是尽早发现错误，尽早改正错误。真正的改进在于尽早发现产生错误的原因，并尽早清除产生错误的原因。犯错的是人，处理错误的是系统。
+    + 当你发现一个错误的时候，也就意味着还有另外一堆你没看见的错误在什么地方等着你。
