--- a/docs/Out-of-Control.org
+++ b/docs/Out-of-Control.org
@@ -79,3 +79,22 @@
       - 最后，在接近项目尾声的时候，将其作为交互的整体来进行测试。
     + 绝对不可能避免错误，但是可以避免错误成为缺陷。零缺陷设计的人物就是尽早发现错误，尽早改正错误。真正的改进在于尽早发现产生错误的原因，并尽早清除产生错误的原因。犯错的是人，处理错误的是系统。
     + 当你发现一个错误的时候，也就意味着还有另外一堆你没看见的错误在什么地方等着你。
+    + 新生物学的解决之道是用一个个可以正常的单元来搭建程序性。
+    + 一个好的程序员可以对任何一个已知的、规律的软件进行重写，巧妙地减少代码。但是，在创造性编程过程中，没有任何已经被完全理解的东西。
+*** 联通所有的一切
+    + 新兴网络经济具备的特征
+      - 分布式核心
+      - 适应性技术
+      - 灵活制造
+      - 批量化的定制
+      - 工业生态学
+      - 全球会计
+      - 共同进化的消费者
+      - 以知识为基础
+      - 免费的带宽
+      - 收益递增
+      - 数字货币
+      - 隐性经济
+    + 这个时代里，最核心的行为就是把所有的东西都联结在一起。
+
+
