* 接近神的人

--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 * 
+*** 接近神的人
+    +  尼古拉.特斯拉。重新读了他的传记。上高中，大学那会儿，对他的中文介绍，几乎都是一笔带过。但，他是接近神的人。
 *** 日常
     + 日常里面应该多做一些改善当前工作，学习的东西。减少和当前工作切入点关联太远的事情。
 *** aircrack-ng 
