--- a/docs/Out-of-Control.org
+++ b/docs/Out-of-Control.org
@@ -96,3 +96,6 @@
       - 数字货币
       - 隐性经济
     + 这个时代里，最核心的行为就是把所有的东西都联结在一起。
+*** 密码无政府状态 
+    + 要阻止信息的越界流动是一件毫无希望的事情。
+    + 在信息时代，情报成为企业最主要的财富。
