--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 * 
+*** 数据格式
++ 转了一圈，主要文档还是用通用的 markdown 比较合适。该有的主要功能都有。
 *** 接近神的人
     +  尼古拉.特斯拉。重新读了他的传记。上高中和大学那会儿，对他的中文介绍，几乎都是一笔带过。但，在那个年代，他是超越时代, 接近神的人。看看 [[https://www.zhihu.com/question/24074639][知乎]] 的争论, [[https://zh.wikipedia.org/wiki/%25E5%25B0%25BC%25E5%258F%25A4%25E6%258B%2589%25C2%25B7%25E7%2589%25B9%25E6%2596%25AF%25E6%258B%2589][维基百科]] 的介绍。然而世人都是更喜欢我们心目中的传说，不会喜欢一个活生生的现实的人。
 *** 日常
