--- a/readme.org
+++ b/readme.org
@@ -1,6 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 * 
-*.
+*** 有所作为 
++ 要想大有作为，就必须把根基再扎的更深，必须融入更富创造力和生产力的过程。
 *** blog change theme
 + [[https://github.com/iTimeTraveler/hexo-theme-hiker][hexo-theme-hiker]] , 这个 theme 貌似比较简洁
 *** 数据格式
