--- a/readme.org
+++ b/readme.org
@@ -1324,36 +1324,6 @@ the ~.~ command will work with ~ds~, ~cs~, and ~yss~ if you install repeat.vim, 
 在vim 中想用命令行命令的话： ~ctry_+z~ , 会使vim进入后台工作, ~fg~ 恢复vim工作 ~bg~
 或者: ~!sh&~
 
-*** 2015-08-03
-节奏突然加快了。
-
-*** 2015-07-24
-安装了php7测试
-
-*** 2015-07-14
-真心难难
-
-*** 2015-07-09
-上线的程序真是提心吊胆～
-
-*** 2015-07-08	
-告别长城了. say goodbye to firewall!
-~set autochdir~ 自动切换当前目录为当前文件所在文件目录
-*** 2015-07-06
-1) 假以时日，必成大器。
-*** 2015-07-05
-1) 重装了系统。换成ubuntu14.04lts版本。又要配置一些其他的配置。
-*** 2015-06-11
-不要什么对往版本库推送
-*** 2015-06-02
-昨晚发高烧，还好听过来了。感冒药对我失去效力。以后不能轻易感冒。
-
-*** 2015-05-29
-phalcon.so  -> /usr/lib/php5/20121212
-*** 2015-05-18
-日志也不对啊。。。。。。
-*** 2015-05-17
-lnmp环境居然没安装成功。
 *** 2015-05-14
 单向散列加密是指通过不同输入长度的信息进行散列计算，得到固定长度的输出， 这个散列计算过程是单向的，即不能对固定长度的输出进行计算而获得输出信息
 + 对称加密
@@ -1397,8 +1367,7 @@ lnmp环境居然没安装成功。
 
 *** 2015-05-06
 -----------
-+ thrift强大～
-+ php模糊查询
++ thrift 强大～
 + 索引有什么好处： 如果按照某个条件去检索数据，如果这个条件没有建立索引，查询的时候是会遍历整张表，如果你建立了索引，查询的时候就会根据索引来查询，进而提高查询性能.
 + mysql 查询
   -- 精确查询， 有且只有一条 （用户注册、登录，单条数据更新）
@@ -1471,7 +1440,7 @@ lnmp环境居然没安装成功。
   ----------------
   补充： linux的许多命令，今天那个叫开眼了。大神就是大神。总之就一句话：linux原来还可以这样玩～
   tag一个，里程碑式的日子。
-1) [[http://www.thinkphp.cn/][thinkphp官网]] [[http://phalconphp.com][phalcon官网]]
+1) [[http://www.thinkphp.cn/][thinkphp 官网]] [[http://phalconphp.com][phalcon官网]]
 2) [[http://requirejs.org/docs/api.html][requirejs]]
 3) 安装git客户端，并熟悉git的使用方式
 4) 安装node: [[http://nodejs.org/][node]] (注意下载它的二进制版本，注意机器的位数)
@@ -1490,7 +1459,6 @@ lnmp环境居然没安装成功。
 
 *** 2015-04-24
 -------------
-面试三，这个面试一共四轮，三层技术, 一层hr
   + 列举五种设计模式，(单元素模式，工厂模式，观察者模式，命令链模式，策略模式，)
   + 写几种算法的思路，（只写了冒泡算法，选择排序，快速排序，插入排序，）
   + 数据库的索引的认识
@@ -1512,41 +1480,16 @@ lnmp环境居然没安装成功。
   + php的SPL接口有哪些？
   + 分区分表
   + 两个域名如何同步登录？
-  + ajax跨域，（jsonp）
-  + ORM等等  (关系型数据模型)
+  + ajax 跨域，（jsonp）
+  + ORM 等等  (关系型数据模型)
   + radis
-  + html那个什么虚线上下框给黑色，差点写成FFF,还好学过物理，知道0是黑的
   + web漏洞，如何防？
   + 自己的网站采用了什么办法提速？
   + 一个打开很慢的网站用什么步骤，什么方法检测问题出在哪里，优化之路?，加速？ ...
 等等，一共60多道。
-面二轮问的直接晕到现在
-三轮的都记不起来了.
-总之，面试收获很多。对体力脑力都有很多直接的调动，消耗，精进。
-如果准备充分，昨天15k的就拿下了。可惜。
-...
-现在脑子还晕着
-今天居然拿不下10k，真心难。但单位挺好的
-
-*** 2015-04-23
--------------
-面试2： 
-+ 大数据，高并发的解决办法，数据库设计(10k以上必问!)
-+ php的垃圾回收机制
-+ 计算一个字符串中某一个字符出现次数。
-+ 递归算法树形输出一个数据表的分类
-+ 自己熟知的开源框架，优缺点，最喜欢那一个？why?
-+ &引用, 函数内使用global关键字
-+ 传值与引用的区别，应用场景。
-+ ===,==区别，举例说明==成立，===不成立的例子
-+ 魔术方法，并说明之。
-+ 常见的http状态码及分别表示什么？
-+ 详述自己项目中最有意思的问题。
 
 *** 2015-04-22
 --------------
-面试：
-+ 输出上周一，格式"2015-03-01"
 + 截取网址后缀： “http://www.xxx.com/xxx/xxx.jpg”的多种方法
   a. substr('http://www.xxx.com/xxx/xxx.jpg', -1, 3)
 + 高并发，大数据访问，采取什么办法, 为什么采取这种办法
@@ -1558,10 +1501,10 @@ lnmp环境居然没安装成功。
   - 使用流量分析统计软件
 + sort, asort, ksort的区别,并分别使用不同排序方法实现
   - sort依据值从小到大排序，键值不参与排序
-  - asort依据值排序，键值参与排序
-  - ksort依据键值排序，值参与排序
+  - asort 依据值排序，键值参与排序
+  - ksort 依据键值排序，值参与排序
 + 超链接之间如何传递数组, 
-  答：先将数组转换成字符串，然后在目标脚本中在将字符串转换成数组，
+ 将数组转换成字符串，然后在目标脚本中在将字符串转换成数组，
   $arg = implode(',', $names);
   echo $url = "localhost/m/index.php?names=".$arg;
   或者cookie, session
@@ -1574,29 +1517,11 @@ lnmp环境居然没安装成功。
 + ajax异步，同步的区别, 应用场景 (async:false为同步)
   - 同步：用户不能做任何操作，只能等待。直到有结果返回。
   - 异步：用户可以做任何操作，结果返回后，自动显示判断结果
-+ 无限级分类的实现原理
 + 远程访问制定文件的两种方法
   a. $th = file_get_contents('http://www.yiqihd.com'); if($th){while(!feof($th)){echo fgets($th);}} 注：fopen()返回的只是一个资源，如果打开失败，本函数返回FALSE
   b. $th_2 = fopen('http://baidu.com');echo $th_2; 注：file_get_contents()打开网页后，返回的是一个字符串，可以直接输出的
   c. curl
-+ 介绍自己最得意的一个作品，如何与团队解决最难的问题的
 + 自己熟悉的一个开源框架，该框架采用什么设计模式，作者如何使用该框架的
-
-*** 2015-04-18
----------------
-开始回归!
-
-*** 2015-04-14
-----------------
-这十来天不写代码，感觉手闲不住。有开始码农的生活了。
-
-*** 2015-04-03
------------------
-出去走两天。到深圳的山上看看这个城市。
-
-*** 2015-03-30
------------------
-落下了两天。重新上路.
 
 *** 2015-03-26
 ------------------
@@ -1780,8 +1705,8 @@ lnmp环境居然没安装成功。
 *** 2015-03-10
 + PHP代码运行流程:
   - ×.ph -> Scanner-> Exprs ->  Parse -> Opcodes -> Exec -> Output
-+ PHP语言级性能优化
-  - 优化点：PHP内置函数的性nengyoulue, isset > array_key_exists()
++ PHP 语言级性能优化
+  - 优化点：PHP 内置函数的性能优劣, isset > array_key_exists()
 + less use php magic function, 减少使用魔术方法减少使用魔术方法
   - linux : time php test.php   -> can see the time of the file use
 + don't use  '@', 严格不使用'@'符号
@@ -1865,12 +1790,7 @@ lnmp环境居然没安装成功。
 
 *** 2015-03-08
 东西多了，得分清急所，大场。
-*** 2015-03-04
-新的一天来了，哈哈
-*** 2015-03-02
-经理既然快辞职，那我得把dob2b的精华学一下。
 *** 2015-02-10
-
 + 通信数据标准格式： code状态码, message,data
 + json格式封装数据
 + php生成xml数据
