--- a/readme.org
+++ b/readme.org
@@ -1,11 +1,13 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 * 
+*** 点滴
+_ 从小处着手, 一点一点理解。
 ***  专注
-"搏二兔, 不得一兔。" --吴清源
++ " *搏二兔, 不得一兔* 。" --吴清源
 *** 强行撕开源码
-没有坚实的打怪升级，强行撕开内核源码的一道口子，有害无益?
++ 没有坚实的打怪升级，强行撕开内核源码的一道口子，有害无益?
 ***  终端神器 
-[[https://github.com/nvbn/thefuck][thefuck]] , 让终端命令行飞一会儿。
++ [[https://github.com/nvbn/thefuck][thefuck]] , 让终端命令行飞一会儿。
 *** 有所作为 
 + 要想大有作为，就必须把根基再扎的更深，必须融入更富创造力和生产力的过程。
 *** blog change theme
