* 哲学家都干了什么？

--- a/docs/What-did-Philosophers-do.org
+++ b/docs/What-did-Philosophers-do.org
@@ -67,5 +67,6 @@
     + 科学得出的真理顶多是一种概率真理。科学家不断做实验，顶多是把科学理论正确的概率提高了一点，却永远不能保证科学理论的绝对正确。
     + 人与动物的区别: 动物做事只凭经验，人却能根据经验总结出必然规律。
     + 世界上没有两片树叶是一样的。
-
+** 远离尘嚣
+    + 有两种东西，我对它们的思考越是深沉和持久，它们在我心灵中唤起的惊奇和敬畏就会日新月异，不断增长。这就是我头上的星空和心中的道德定律。
 
