--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,28 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 *  -
+*** jquery 改编 [[http://car.autohome.com.cn/config/series/81.html][汽车之家]] 滚动切换左侧目录效果的核心 js
+###+BEGIN_SRC JS
+    for (var i = 0, len = metoList.length; i < len; i++) {
+        var h = wd.abs.point(metoList[i].dom).y + wd.dom.id(metoList[i].dom.getAttribute('pid')).offsetHeight - 35 - (top + i * 27);
+        if (h > sT.top) {
+            for (var j = 0, l = obj_link.length; j < l; j++) obj_link[j].className = '';
+            obj_link[i].className = 'active';
+            break;
+        }
+    }
+###+END_SRC
+###+BEGIN_SRC JS
+      for (var i = 0, l = tables.length; i < l; i++) {
+          var h = $(tables[i]).offset().top + $(tables[i]).height() - th_h - (father_h + i * step_h);
+          if(h > w_sroll) {
+              lis.eq(i).addClass('active').siblings().removeClass('active');
+              tales.eq(i).addClass('on').siblings().removeClass('on');
+              break;
+          }
+      }
+###+END_SRC
+
++ 这段代码很有意思，事实上直接使用一层循环就可实现, 没必要使用内层循环。优化之后更简洁, 减少不必要的遍历开销, 可读性有所改善，毕竟使用 jquery 多了，原生的 js 只能读懂 60% 左右, [[./html/optimize_car.js][完整代码]]。
 *** 解决高版本对java版本的依赖
     + ubuntu 系统内核和程序升级之后，smartgit 启动失败了， 
 #+BEGIN_SRC
