--- a/readme.org
+++ b/readme.org
@@ -176,7 +176,7 @@ _ 从小处着手, 一点一点理解。
 + emacs 使用 =M x= 调起 =package-install= 安装 *php-extras-generate-eldoc* 之后，编辑 php 文件时，光标下的　php 函数都有函数参数提示
 + emacs =jump-to-go=   jump to defined of a function, 非常好用://github.com/daniel1988
 *** 游戏
-+ 这周玩了下以前玩过的一款游戏－－真三国无双。和[[https://github.com/danie1988][罗宗]]说的一样： 一款游戏，偶尔玩下，就是你玩游戏; 沉迷进去的，就是被游戏玩了。游戏为什么吸引人呢？特别是竞技性的游戏。我觉得他们提供了一个让人挥洒精力和时间的交流平台。以配合技能的团队方式，能有效的组织起众人的战斗激情。升级的模式符合打斗场景的预设 以及大众游戏玩家的心理需求。　
++ 这周玩了下以前玩过的一款游戏－－真三国无双。和[[https://github.com/daniel1988][罗宗]] 说的一样: 一款游戏，偶尔玩下，就是你玩游戏; 沉迷进去的，就是被游戏玩了。游戏为什么吸引人呢？特别是竞技性的游戏。我觉得他们提供了一个让人挥洒精力和时间的交流平台。以配合技能的团队方式，能有效的组织起众人的战斗激情。升级的模式符合打斗场景的预设 以及大众游戏玩家的心理需求。　
 *** 不经意之间
 + 有些悬而未解的难题，不妨放一放。某个不经意间，轻而易举就解决了。emacs 里面也可以翻墙了。利用终端的shadowsocks + eww, nice! 好吧， 我手机也可以翻墙了。。。。。。
 + 我所遇到的问题，好像基本上google上面都有人遇到过。而且80%都有切实可行的实现方式。
