--- a/docs/readme.org
+++ b/docs/readme.org
@@ -2,6 +2,7 @@
 *  -
 
 *** 有感而发
++ [[https://www.tuicool.com/articles/3Q7R3y][zabbix 填家自定义监控]]
 + 脱离需要解决具体问题的语言争吵都是瞎扯.
 + [[https://www.zhihu.com/question/67846139][面试go试着解决这些面试问题]]
 
