--- a/docs/readme.org
+++ b/docs/readme.org
@@ -2,6 +2,13 @@
 *  -
 ***  linux 下访问 windows 远程桌面 
 + 可以使用 [[https://github.com/rdesktop/rdesktop][rdesktop]]
++ 需要一些依赖
+#+BEGIN_SRC SHELL
+sudo apt-get install ibxcursor-dev libpcsclite-dev libssl-dev
+./bootstrap && ./configure --disable-credssp && make
+sudo make install 
+#+END_SRC
+
 *** 伤不起的  windows 开发环境 
 我没想着有一天我会在一个周围尽是 windows 的开发工具的环境里工作，总之一言难尽。你稍微装一下工具之类，在 linux 下三下五去二就搞完了，但是 windows 下面总是出一些 幺蛾子, 而且很多流氓软件，你杀都杀不干净。像韭菜一样，请不走。今天发现 C 盘快满了。C 盘容量总共 121G， 使用 Git Bash 终端查看时，df -h 看了一下。80%磁盘被占用了。赶紧下载一个 WinDirStat 查看了一下各文件夹占用空间大小分布，及百分比。发现系统盘只有 26G 左右。剩下的都是些开发工具。一口气清理掉前人安装的 VS Code 什么的。
 
