login remote server aithout every time secret

--- a/docs/readme.org
+++ b/docs/readme.org
@@ -1,5 +1,12 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
+** linux下四步实现服务器免密登录
 
+#+BEGIN_SRC SHELL
+ssh-keygen
+scp ~/.ssh/id_rsa.pub user@host:
+ssh user@host 
+cat id_rsa.pub >> ~/.ssh/authorized_keys
+#+END_SRC
 ** up
 *** 如愿拿到mbp, 开启大杀四方吧.
 *** archlinux 下快速切换 caps 和 ctrl
